# FraudClassifier

./: .dockerignore  .gitignore  Case Fraude.ipynb  Dockerfile  Makefile  README.md  requirements.txt  test_payload.json
.github/workflows/: ci.yml
.ipynb_checkpoints/: Case Fraude-checkpoint.ipynb
app/: main.py  model_pipeline.pkl
mlruns/0/: meta.yaml
models/: lightgbm.joblib  model_pipeline.pkl
src/: config.py  dataset.py  features.py  pyproject.toml
src/data/: make_dataset.py
src/features/: apply_kfold_target_encoding.py
src/models/: predict.py  predict_model.py  train.py  train_model.py
src/tests/: test_features.py  test_predict.py
streamlit/: app.py
tests/features/: test_apply_kfold_target_encoding.py
tests/models/: predict_model.py  train_model.py
